# lol_fala

./: CMakeLists.txt  README.md  drawing_stuff.cpp  drawing_stuff.h  main.cpp
